app/static/index.css
html, body {
	background: #fac4c4;
	font-family: 'Open Sans', sans-serif !important;
	color: #525f7f !important;
}

.logo {
	max-width: 30%;
    display: block;
    margin: 30px auto;
}

.header {
	background: #fac4c4;
}

.main-title {
	font-weight: 700 !important;
	color: white !important;
}
.btn {
	display: block;
	width: 50%;
	background:linear-gradient(90deg, rgb(241, 113, 113), rgb(241, 76, 113));
	color: #fff !important;
	font-weight: 700 !important;
	padding: 10px 10px;
	border:none !important;
	outline: none !important;
    border-radius: 50px !important;
    cursor: pointer;
}

.profile-container {
	text-align: center !important;
	padding: 20px !important
}

.profile-container img {
	margin-bottom: 20px !important;
	border-radius: 50% !important;
}

.btn a, .btn a:hover, .btn a:active, .btn a:focus {
	text-decoration: none !important;
	font-weight: 700 !important;
	color: white !important
}

.btn a:hover {
	text-decoration: none !important;
	font-weight: 700 !important;
	color: white !important
}

.table-category {
	font-weight: 600 !important;
	color: #525f7f !important
	
}

table tr, table tr td {
	color: #525f7f !important
}

table a {
	text-decoration: none;
	color: #2C3E50 !important
}

table a:hover {
	text-decoration: none;
	color: #2C3E50 !important
}

.homelink {
	text-decoration: none;
	font-weight: 700;
	color: #F1948A
}

hr { 
	border: 0;
    height: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
	margin-top: 15px;
	margin-bottom: 15px;
  }

h1,h2,h3,h4,h5, h6 {
	  color: #525f7f !important;
  }

.thick-heading {
	  font-weight: 700 !important;
  }

.less-black {
	color:#2C3E50 !important;
  }

.fixed-table th {
	position: sticky !important;
	top: 0 !important;
	z-index: 10 !important;
	background: whitesmoke !important;
  }

.content_section {
	display: block;
}

.alert-box-s {
	text-align: center; 
	border-radius: 0; 
	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.298039); 
	margin:auto; 
	font-weight: 600; 
	padding: 20px; 
	width: 40% ;
	position:fixed !important;
	z-index: 999 !important;
}

.latest-tag {
	color: white !important;
}

.fetch-container {
	background-color: white !important;
}

.fetch-container .content {
	padding: 25px 120px;
}

.fetch-container .btn {
	width: 100% 
}

.btn-table {
	margin: 20px 0 !important;
}

.btn-fetch {
	margin: 20px auto;
}

.active-pink-2 input.form-control[type=text]:focus:not([readonly]) {
	border-bottom: 1px solid #f48fb1;
	box-shadow: 0 1px 0 0 #f48fb1;
  }

.dataTables_filter input.form-control {
	border: 0 !important;
	border-bottom: 2px solid #f48fb1 !important;
	outline: none !important;
	border-radius: 0px !important;
}

.dataTables_filter input.form-control:focus, .dataTables_filter input.form-control:active  {
	outline: none !important;
}

.dataTables_filter label {
	font-size: 12px !important;
	padding-top: 15px !important;
	padding-right: 25px !important;

}

.outlined {
	border: 1px solid blue;
  }

  .scroll {
    max-height: 100px;
    overflow-y: scroll;
}

.table-custom-scrollbar {
	position: relative;
	height: 740px;
	overflow: auto;
	}

	.table-scroll-x {
		max-width: 100%;
		overflow-x: scroll;
	}

.table-wrapper-scroll-y {
display: block;
}

.small-table-custom-scrollbar {
	position: relative;
	height: 380px;
	overflow: auto;
	}

.scrollable-height {
	position: relative;
	height: 280px;
	overflow: auto;
}

::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
	background-color: #F5F5F5;
	border-radius: 10px;	
}
	
::-webkit-scrollbar {
	width: 4px;
	height: 4px;  
	background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb {
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
	background-image: -webkit-gradient(linear, left bottom, left top, from(#ff9a9e), color-stop(99%, #fecfef),
	to(#fecfef));
	background-image: -webkit-linear-gradient(bottom, #ff9a9e 0%, #fecfef 99%, #fecfef 100%);
	background-image: linear-gradient(to top, #ff9a9e 0%, #fecfef 99%, #fecfef 100%);
}

.dataTables_info {
	padding: 1rem 1rem !important;
}

.small-text {
	font-size: 0.7em !important;
}

